# makeathon24

./: Dockerfile  README.md  package-lock.json
backend/: .env.example  .gitignore  1.fetch_data.ipynb  2.put_to_database.ipynb  3. getpictures.ipynb  4.clean_db.ipynb  5.user_db.ipynb  README.md  Untitled-1.ipynb  dfile.html  distinct_descriptions.json  distinct_models.json  filter_schema.json  pyproject.toml  qdrant.json  sandbox copy.ipynb
backend/backend/: __init__.py  server.py  session.py
backend/backend/agents/: sales.py
backend/backend/agents/backstage/: backstage.py  constraint_extractor.py  filter_extractor.py  recommender.py  util.py
backend/backend/assistant/: sales.py
backend/backend/assistant/backroom/: requirements_extractor.py
backend/backend/db/: products.py  users.py  util.py
backend/backend/sync/: __init__.py  assistant.py  history.py
frontend/: .env  .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: chat.tsx  settings.tsx  showroom.tsx  theme-switch.tsx  utils.ts
frontend/components/base/: confirm-button.tsx  copy-text.tsx  expander.tsx  md.tsx  open-list.tsx  single-select.tsx  tooltip.tsx
frontend/components/forms/: json-forms.tsx  reorder-array-field.tsx
frontend/components/sidebar/: layout.tsx  sidebar.tsx
frontend/config/: site.ts
frontend/hooks/: storage.tsx
